# opendal-indexeddb

./: Cargo.toml  README.md
src/: backend.rs  config.rs  lib.rs  test.rs
